# cross_platform_minimal_deploy

./: .env.example  .gitignore  README.md  agent_registry.py  config.py  deploy.config.example  deploy_config.py  deploy_env.ps1  deploy_env.sh  deploy_logging.py  failure_watchdog.py  mac_git_setup.sh  mac_setup.sh  pull_setup.command  push_terminal_bundle.sh  pyproject.toml  requirements.txt  run_mac_terminal_tests.sh  run_terminal_tests.ps1  run_terminal_tests.sh  setup.command  setup_mac_git.sh  start.bat  start.command  start.ps1  start.sh  start_dev.command  start_dev.ps1  start_dev.sh  stop.bat  stop.command  stop.ps1  stop.sh  stop_dev.bat  stop_dev.ps1  stop_dev.sh  sync_from_git.sh
agent/: agent_events.py  agent_runner.py  prompts.py  test_jobs_behaviors.py
backend/: agent_state.py  fs_browser.py  main.py  message_queue.py  turn_models.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: clean_mac_stale_scripts.py  diag_mac_search_turn.py  diag_mac_semantic_quick.py  diag_mac_semantic_search.py  pull_mac_prod_dev.py  repair_mac_frontend.py  repro_summarization_prefetch.py  reset_mac_fresh.py  reset_registry.py  restart_mac_services.py  restore_mac_agents.py  run_mac_git_setup.py  sync_frontend_mac.py  sync_to_mac.py
tests/: run_terminal.ps1  run_terminal.sh  run_terminal_mac.sh  test_agent_registry.py  test_deploy_config.py  test_model_switch.py  test_prompt_wrapping.py  test_smoke_dev.py  test_stream_draft_live.py  test_stream_draft_reader.py  test_summarization_deploy.py  test_turn_models.py
(+56 files in other folders)
