[project]
name = "arion-agent-deploy"
version = "0.4.4"
description = "Deployment infrastructure for the Arion agent system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "agent",
    "ai",
    "deploy",
    "arion",
    "fastapi",
    "react",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "arion-agent[deepseek]>=0.4.4",
    "typing-extensions>=4.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
all-providers = [
    "arion-agent[all-providers]>=0.4.4",
]
browser = [
    "arion-agent[browser]>=0.4.4",
]
search = [
    "arion-agent[search]>=0.4.4",
]
ssh = [
    "paramiko>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "arion-agent[search]>=0.4.4",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "agent*", "deploy_logging*", "failure_watchdog*",
           "config*", "agent_registry*"]
